--- a/style.css
+++ b/style.css
@@ -290,10 +290,6 @@ li::before{
 
 .slider{
     transition: 0.5s ease-in-out;
-    opacity: 
-    position: absolute;
-    width: 100%;
-    height: 100%;
 }
 
 .slider.active{
@@ -374,6 +370,7 @@ li::before{
     text-align: center;
     font-family: roboto;
     color: rgb(138, 137, 137);
+    margin: 0;
 }
 
 
@@ -396,6 +393,21 @@ li::before{
 }
 
 .main-container2{
+    flex-direction: column;
+}
+
+.package-category{
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.panel{
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 0;
+}
+hr{
+    align-items: flex-start;
     flex-direction: column;
 }
 }
